--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_tts: 1.0.0
   speech_to_text: 2.1.0
   speech_recognition: ^0.3.0+1
+  yaml: ^2.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -43,7 +44,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/tasks/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
