--- a/assets/tasks/task1.yml
+++ b/assets/tasks/task1.yml
@@ -9,8 +9,10 @@ requirements:
 steps:
   - id: 1
     description: Coloca 3 cucharadas de aceite para freír o 30g de mantequilla en la sartén y lleva a fuego medio
+    time: 5
   - id: 2
     description: Deja fundir la grasa hasta que comience a chisporrotear cuando viertas una gotita de agua. Este truco se emplea para saber si la temperatura del aceite es la adecuada para cocinar el huevo frito perfectamente.
+    time: 20
     require: [1]
   - id: 3
     description: Rompe el huevo suavemente para que no se deshaga la yema, y déjalo caer sobre la mantequilla o el aceite.
